--- a/src/components/GameScreen/styles.module.css
+++ b/src/components/GameScreen/styles.module.css
@@ -1,44 +1,38 @@
 .screen {
-  display: grid;
+  @apply grid h-screen;
   grid-template-columns: 3fr 1fr;
   background-color: #0f380f;
-  height: 100vh;
 }
 
 .game {
-  overflow-y: auto;
+  @apply overflow-y-auto mr-1;
 }
 
 .side {
-  overflow-y: auto;
+  @apply overflow-y-auto overflow-x-hidden;
+  border-left: 1px solid slategray;
 }
 
 .logo {
-  height: 8vmin;
-  pointer-events: none;
+  @apply h-12 pointer-events-none;
 }
 
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  font-size: calc(10px + 2.5vmin);
-  padding: 5px;
+  @apply flex items-center justify-evenly p-1;
+  font-size: calc(10px + 2vmin);
   color: #9bbc0f
 }
 
 .events-list {
-  padding: 5px;
+  @apply p-1.5;
   border: 0.5px solid #aaaaaa;
 }
 
 .events-title {
+  @apply mb-1.5 block;
   color: #9bbc0f;
-  margin-bottom: 6px;
-  display: block;
 }
 
 .events-container {
-  border: 0.5px solid #aaaaaa;
-  padding: 6px;
+  @apply p-1.5;
 }
