--- a/src/components/PlayerView/PlayerInventoryView/styles.module.css
+++ b/src/components/PlayerView/PlayerInventoryView/styles.module.css
@@ -1,47 +1,29 @@
 .inventory {
-  display: flex;
-  flex-direction: column;
-  margin-top: 4px;
+  @apply flex flex-col mt-1;
 }
 
 .equipment {
-  padding-top: 4px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 6px;
+  @apply grid grid-cols-2 gap-1.5 pt-1;
 }
 
 .item-group {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
+  @apply flex flex-col gap-1;
 }
 
 .item-name {
-  font-style: normal;
+  @apply not-italic;
 }
 
 .item {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 2px;
+  @apply p-2 flex flex-col items-start gap-0.5;
 }
 
 .equip {
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  padding-top: 2px;
-  width: 100%;
-  justify-content: space-between;
+  @apply flex pt-0.5 gap-1 items-center;
 }
 
 .actions {
-  display: flex;
-  gap: 2px;
+  @apply flex gap-0.5;
 }
 
 .attack {
