--- a/src/components/PlayerView/PlayerInventoryView/styles.module.css
+++ b/src/components/PlayerView/PlayerInventoryView/styles.module.css
@@ -33,3 +33,12 @@
 .defense {
   color: #9bbc0f;
 }
+
+.card {
+  color: #9bbc0f;
+  border: 0.5px solid #0f380f;
+}
+
+.card:hover {
+  border: 0.5px solid #9bbc0fbf;
+}
