--- a/src/components/FixturePositionView/styles.module.css
+++ b/src/components/FixturePositionView/styles.module.css
@@ -36,3 +36,12 @@
 .hidden-search {
   @apply flex justify-between items-center gap-1;
 }
+
+.card {
+  color: #9bbc0f;
+  border: 0.5px solid #0f380f;
+}
+
+.card:hover {
+  border: 0.5px solid #9bbc0fbf;
+}
