--- a/src/components/ExitView/ExitView.module.css
+++ b/src/components/ExitView/ExitView.module.css
@@ -1,13 +1,7 @@
 .description {
   @apply p-2 flex items-center justify-between gap-2;
-  color: #9bbc0f;
 }
 
 .card {
-  color: #9bbc0f;
-  border: 0.5px solid #0f380f;
-}
-
-.card:hover {
-  border: 0.5px solid #9bbc0fbf;
+  border: 0.5px solid;
 }
