--- a/src/components/NpcPositionView/NpcPositionView.module.css
+++ b/src/components/NpcPositionView/NpcPositionView.module.css
@@ -1,6 +1,5 @@
 .npc-position {
-  @apply p-5 flex flex-col gap-2 items-start;
-  color: #9bbc0f;
+  @apply flex flex-col gap-2 items-start pl-4 pb-4 pr-4;
 }
 
 .label {
@@ -8,7 +7,7 @@
 }
 
 .basic-actions {
-  @apply flex flex-wrap gap-1 mt-2;
+  @apply flex flex-col flex-wrap gap-1 mt-2;
 }
 
 .inventory {
