--- a/src/components/OptionsScreen/OptionsScreen.module.css
+++ b/src/components/OptionsScreen/OptionsScreen.module.css
@@ -1,30 +1,24 @@
 .generate-button {
   @apply pl-1 pr-1 w-fit text-center;
-  background-color: #9bbc0f;
-  color: #0f380f;
 }
 
 .generate-pc {
   @apply flex gap-2;
-  color: #9bbc0f;
 }
 
-.game-id-section {
+.id-section {
   @apply ml-5;
 }
 
-.game-id-select {
+.select {
   @apply p-0.5 max-h-8;
-  background-color: #9bbc0f;
-  color: #0f380f;
-  max-width: 50%;
 }
 
 .id-and-generate {
   @apply flex flex-wrap pb-2 pl-2 pr-2 gap-2 items-center;
 }
 
-.game-ids {
+.section {
   @apply flex flex-col items-center gap-2;
 }
 
