--- a/src/components/actions/styles.module.css
+++ b/src/components/actions/styles.module.css
@@ -2,6 +2,14 @@
   @apply p-1;
 }
 
+.attack-button {
+  @apply p-1 w-10;
+}
+
+.sword {
+  @apply h-8 max-w-none;
+}
+
 .action-button {
   @apply w-fit text-center pl-1 pr-1;
 }
