--- a/app/src/index.css
+++ b/app/src/index.css
@@ -30,16 +30,22 @@ code {
 h1 {
   @apply p-1 mb-0.5 underline;
 
-  font-size: calc(10px + 3vmin);
+  font-size: calc(10px + 4vmin);
 }
 
 h2 {
   @apply p-1 mb-0.5 underline;
 
-  font-size: calc(10px + 2.5vmin);
+  font-size: calc(10px + 3vmin);
 }
 
 h3 {
+  @apply p-1 mb-0.5;
+
+  font-size: calc(10px + 2.5vmin);
+}
+
+h4 {
   @apply p-1 mb-0.5;
 
   font-size: calc(10px + 2vmin);
