--- a/src/screens/SignIn/SignInScreen.module.css
+++ b/src/screens/SignIn/SignInScreen.module.css
@@ -1,13 +1,12 @@
 .login-form-wrap {
   @apply mt-10 p-5 text-center;
-  width: 35%;
   height: 40%;
   border-radius: 4px;
   box-shadow: 0px 30px 50px 0px rgba(0, 0, 0, 0.2);
 }
 
 .screen {
-  @apply min-h-screen h-screen w-screen flex justify-center;
+  @apply min-h-screen h-screen w-screen justify-items-center;
 }
 
 .container {
