--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  @apply m-0 p-0;
+  @apply m-0 p-0 h-screen;
   font-family: -apple-system, "monogram-extended";
   font-size: calc(10px + 1.75vmin);
 
